--- a/DOM Intro/index.html
+++ b/DOM Intro/index.html
@@ -6,8 +6,10 @@
     <title>DOM Introduction</title>
     <!-- <script src="/script.js"></script> -->
     <!-- <script src="/script.js" async></script> -->
+    <link rel="stylesheet" href="style.css" />
     <script src="/script.js" defer></script>
   </head>
+
   <body>
     <!-- <div id="content">
       Hello <span style="display: none">Hidden</span> World
@@ -15,5 +17,55 @@
 
     <!-- <h1>Hello vinay.js</h1> -->
     <!-- <script src="/script.js"></script> -->
+
+    <!-- <img
+      id="myImage"
+      src="https://images.unsplash.com/photo-1754254082673-68b06be1308f?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      alt="Old Image"
+      data-category="nature"
+    />
+    <button onclick="updateImage()">Update Image</button> -->
+    <!-- 
+    <h3>hello</h3>
+    <h3>I</h3>
+    <h3>am</h3>
+    <h3>Vinay</h3>
+    <h3>JavaScript</h3>
+    <button onclick="change()">change</button> -->
+    <!-- 
+    <ul>
+      <li class="item">Item 1</li>
+      <li class="item">Item 2</li>
+      <li class="item">Item 3</li>
+    </ul>
+    <button onclick="highlightItems()">Highlight All Items</button> -->
+
+    <!-- <div id="container">
+    <p>Original content</p>
+  </div>
+  <button onclick="updateHTML()">Update HTML</button>-->
+
+    <!-- <div id="myDiv" class="original-class">Click the button to toggle styles</div>
+  <button onclick="toggleStyles()">Toggle Styles</button> -->
+
+    <!-- <p class="ready">Hello</p>
+  <button onclick="changePara()">change</button> -->
+
+    <!-- <div class="parent"> -->
+    <!-- </div> -->
+    <!-- <div id="container">
+    <h2>Existing Content</h2>
+</div>
+<button onclick="addElements()">Add Elements</button> -->
+<!-- 
+    <input type="text" id="todoInput" placeholder="Enter todo" />
+    <button onclick="addTodo()">Add Todo</button>
+    <div id="todoList"></div> -->
+
+    <div id="main-content">
+    <h2>Main Content</h2>
+    <p>This is the main paragraph.</p>
+</div>
+<button onclick="insertContent()">Insert Content</button>
   </body>
 </html>
