--- a/Async JS/index.html
+++ b/Async JS/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events In JavaScript</title>
-    <script src="/script.js" defer></script>
+    <title>ASYNC JS</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <h1 class="head">Vinay.Simmy</h1>
-    <button class="btn" >Switch GF</button>
-
-
+    
 </body>
 </html>
