--- a/Callback Queue/index.html
+++ b/Callback Queue/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Callback Function</title>
+    <title>Callback Function and Promises</title>
     <script src="/script.js" defer></script>
 </head>
 <body>
