--- a/12. Generate Card on Button Click With Fetch API/index.html
+++ b/12. Generate Card on Button Click With Fetch API/index.html
@@ -3,27 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>10. Real Life Developer Problems</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>12. Generate Card on Button Click with Fetch API</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <div
-      class="w-full min-h-screen p-10 bg-zinc-900 text-white font-['montserrat']"
-    >
+    <div class="btn-parent w-full flex justify-center">
       <button
-        id="getUser"
-        class="bg-green-600 px-8 py-2 rounded-md font-semibold text-sm mb-10"
+        class="get-user border-2 p-2 m-5 rounded-xl bg-green-300 cursor-pointer"
       >
-        Get New Card
+        Get New User
       </button>
-      <div id="parent" class="cards flex gap-10 flex-wrap"></div>
     </div>
+    <div class="parent flex flex-wrap justify-center"></div>
   </body>
 </html>
